  Patch mostly by Serhiy Storchaka.

- Update the python.gif icon for the Idle classbrowser and pathbowser
  from the old green snake to the new new blue and yellow snakes.

- Issue #17721: Remove non-functional configuration dialog help button until we
  make it actually gives some help when clicked. Patch by Guilherme Simões.

Tests
-----

- Issue #20532: Tests which use _testcapi are now marked as CPython only.

- Issue #19920: Added tests for TarFile.list().  Based on patch by Vajrasky Kok.

- Issue #19990: Added tests for the imghdr module.  Based on patch by
  Claudiu Popa.

- Issue #20474: Fix test_socket "unexpected success" failures on OS X 10.7+.

- Issue #20605: Make test_socket getaddrinfo OS X segfault test more robust.

Documentation
-------------

- Issue #20488: Importlib is no longer *an* implementation of import, it's *the*
  implementation.


What's New in Python 3.3.4?
===========================

*Release date: 09-Feb-2014*

Library
-------

- Issue #20374: Fix build warnings of the readline module with libedit on Mac.


What's New in Python 3.3.4 release candidate 1?
===============================================

*Release date: 26-Jan-2014*

Core and Builtins
-----------------

- Issue #17825: Cursor "^" is correctly positioned for SyntaxError and
  IndentationError.

- Issue #2382: SyntaxError cursor "^" is now written at correct position in most
  cases when multibyte characters are in line (before "^").  This still not
  works correctly with wide East Asian characters.

- Issue #18960: The first line of Python script could be executed twice when
  the source encoding was specified on the second line.  Now the source encoding
  declaration on the second line isn't effective if the first line contains
  anything except a comment.  'python -x' works now again with files with the
  source encoding declarations, and can be used to make Python batch files
  on Windows.

- Issue #17432: Drop UCS2 from names of Unicode functions in python3.def.
